# litestar-storages

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  PLAN.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  pages-deploy.yml  publish-joke-package.yml  publish.yml  release.yml
benchmarks/: README.md  __init__.py  benchmark_operations.py
docs/: changelog.md  conf.py  getting-started.md  index.md  requirements.txt
docs/_static/: custom.css
docs/advanced/: multipart-uploads.md  progress-callbacks.md
docs/api/: base.rst
docs/api/backends/: filesystem.rst  s3.rst
docs/api/contrib/: dependencies.rst  dto.rst  plugin.rst
docs/backends/: azure.md  gcs.md
docs/cookbook/: index.md  multi-backend-config.md  streaming-large-files.md
examples/: README.md  gcs_multipart_upload.py
examples/book-library/: README.md  __init__.py  app.py  controllers.py  models.py  pyproject.toml
examples/book-library/tests/: __init__.py  conftest.py  test_app.py
examples/full_featured/: app.py
examples/minimal/: app.py
examples/todo-attachments/: README.md  __init__.py  app.py  models.py  pyproject.toml
examples/todo-attachments/tests/: __init__.py  test_app.py
pr-preview/pr-20/: changelog.html  comparison.html  objects.inv  searchindex.js
pr-preview/pr-20/.doctrees/: getting-started.doctree  index.doctree
pr-preview/pr-20/.doctrees/advanced/: multipart-uploads.doctree
pr-preview/pr-20/.doctrees/api/: exceptions.doctree  types.doctree
pr-preview/pr-20/.doctrees/backends/: memory.doctree
pr-preview/pr-20/.doctrees/cookbook/: file-upload-validation.doctree  image-processing-pipeline.doctree
pr-preview/pr-20/_modules/: index.html
pr-preview/pr-20/_modules/litestar_storages/: exceptions.html  types.html
pr-preview/pr-20/_sources/advanced/: retry.md.txt
pr-preview/pr-20/_sources/api/: types.rst.txt
pr-preview/pr-20/advanced/: custom-backends.html  multipart-uploads.html  progress-callbacks.html  retry.html
pr-preview/pr-20/api/: base.html  exceptions.html  types.html
pr-preview/pr-20/api/backends/: azure.html  filesystem.html  gcs.html  memory.html
pr-preview/pr-20/api/contrib/: dependencies.html  dto.html  index.html  plugin.html
pr-preview/pr-20/backends/: azure.html  filesystem.html  gcs.html  memory.html
pr-preview/pr-20/cookbook/: image-processing-pipeline.html  index.html  multi-backend-config.html
pr-preview/pr-21/: .buildinfo  changelog.html  examples.html  genindex.html  getting-started.html  index.html  py-modindex.html  searchindex.js
pr-preview/pr-21/.doctrees/: changelog.doctree
pr-preview/pr-21/.doctrees/backends/: gcs.doctree
pr-preview/pr-21/.doctrees/cookbook/: index.doctree  multi-backend-config.doctree
pr-preview/pr-21/_modules/litestar_storages/: base.html
pr-preview/pr-21/_sources/: changelog.md.txt  comparison.rst.txt  examples.md.txt
pr-preview/pr-21/_sources/backends/: azure.md.txt
pr-preview/pr-21/_sources/cookbook/: file-upload-validation.md.txt  image-processing-pipeline.md.txt
pr-preview/pr-21/api/: index.html
pr-preview/pr-21/api/backends/: index.html  s3.html
pr-preview/pr-21/backends/: s3.html
pr-preview/pr-21/cookbook/: file-upload-validation.html  streaming-large-files.html
pr-preview/pr-29/: changelog.html  comparison.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pr-preview/pr-29/.doctrees/: changelog.doctree
pr-preview/pr-29/.doctrees/advanced/: custom-backends.doctree  progress-callbacks.doctree  retry.doctree
pr-preview/pr-29/.doctrees/api/: base.doctree  index.doctree
pr-preview/pr-29/.doctrees/cookbook/: streaming-large-files.doctree
pr-preview/pr-29/_modules/: index.html
pr-preview/pr-29/_modules/litestar_storages/: base.html  exceptions.html  types.html
pr-preview/pr-29/_sources/: changelog.md.txt  index.md.txt
pr-preview/pr-29/_sources/api/: exceptions.rst.txt  index.rst.txt
pr-preview/pr-29/_sources/backends/: filesystem.md.txt  memory.md.txt  s3.md.txt
pr-preview/pr-29/advanced/: custom-backends.html  multipart-uploads.html  progress-callbacks.html  retry.html
pr-preview/pr-29/api/: base.html  exceptions.html  index.html  types.html
pr-preview/pr-29/api/backends/: azure.html  filesystem.html  gcs.html  index.html  memory.html  s3.html
pr-preview/pr-29/api/contrib/: dependencies.html  dto.html  index.html  plugin.html
pr-preview/pr-29/backends/: azure.html  filesystem.html  gcs.html  memory.html  s3.html
pr-preview/pr-29/cookbook/: file-upload-validation.html  image-processing-pipeline.html  index.html  multi-backend-config.html  streaming-large-files.html
pr-preview/pr-7/: changelog.html  comparison.html  examples.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
pr-preview/pr-7/.doctrees/: changelog.doctree  comparison.doctree  examples.doctree  getting-started.doctree  index.doctree
pr-preview/pr-7/_modules/: index.html
pr-preview/pr-7/_sources/: getting-started.md.txt
pr-preview/pr-7/advanced/: custom-backends.html  multipart-uploads.html  progress-callbacks.html  retry.html
pr-preview/pr-7/api/: base.html  exceptions.html  index.html  types.html
pr-preview/pr-7/api/backends/: azure.html  (+5 more)
pr-preview/pr-7/backends/: azure.html  filesystem.html  gcs.html  memory.html  s3.html
src/litestar_storages/: __init__.py  __metadata__.py  base.py  exceptions.py  retry.py  types.py
src/litestar_storages/backends/: __init__.py  azure.py  filesystem.py  gcs.py  memory.py  s3.py
src/litestar_storages/contrib/: __init__.py  dependencies.py  dto.py  plugin.py
tests/: README.md  TEST_GUIDE.md  __init__.py  conftest.py  test_base.py  test_exceptions.py  test_protocol.py  test_retry.py  test_types.py
tests/backends/: __init__.py  test_azure.py  test_filesystem.py  test_gcs.py  test_memory.py  test_s3.py
tests/contrib/: __init__.py  test_dependencies.py  test_plugin.py
tests/examples/: __init__.py  test_full_featured_app.py  test_minimal_app.py
(+50 files in other folders)
