[project]
name = "todo-attachments-example"
version = "0.1.0"
description = "Litestar Todo app with file attachments example"
requires-python = ">=3.9"

dependencies = [
    "litestar>=2.0.0",
    "litestar-storages",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
